--- a/video.css
+++ b/video.css
@@ -70,3 +70,42 @@
         display: block;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    video {
+        width: 620px;
+        height: 620px;
+    }
+}
+
+/* Estilos para dispositivos con un ancho de pantalla entre 992px y 1199px */
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+    video {
+        width: 500px;
+        height: 500px;
+    }
+}
+
+/* Estilos para dispositivos con un ancho de pantalla entre 768px y 991px */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    video {
+        width: 380px;
+        height: 380px;
+    }
+}
+
+/* Estilos para dispositivos con un ancho de pantalla entre 576px y 767px */
+@media screen and (min-width: 576px) and (max-width: 767px) {
+    video {
+        width: 260px;
+        height: 260px;
+    }
+}
+
+/* Estilos para dispositivos con un ancho de pantalla menor a 575px */
+@media screen and (max-width: 575px) {
+    video {
+        width: 100%;
+        height: auto;
+    }
+}
